--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -47,7 +47,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "ArhjhtMj28p9"
       },
@@ -112,7 +112,7 @@
         "id": "irwaT1or3BQL",
         "outputId": "0a75d76c-088f-4b0e-eb34-7959d0caa0e7"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
       "metadata": {
         "id": "14ybNAxr3Fyi"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -191,7 +191,7 @@
       "metadata": {
         "id": "jGlh0CCu3MwZ"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +210,7 @@
         },
         "outputId": "8c2abaf9-d94d-4449-9a21-e290f03d9b3e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -334,12 +334,14 @@
         "import re\n",
         "\n",
         "\n",
+        "#create grouped books df where books are split on volume vol vol and #\n",
         "books_df_g = books_df.copy()\n",
+        "#remove numbers and , from titles\n",
         "books_df_g[\"title\"] = books_df_g[\"title\"].str.replace(r'(\\d)+ ', '')\n",
         "books_df_g[\"title\"] = books_df_g[\"title\"].str.replace(r' (\\d)+', '')\n",
         "books_df_g[\"title\"] = books_df_g[\"title\"].str.replace(',', '')\n",
         "display(books_df_g.title)\n",
-        "print(\"oki{}\".format(len(books_df_g[books_df_g.title.str.split(pat = ' Volume| Vol\\.| vol\\.| #').str[0]==\"\"])))\n",
+        "#group the books by title if the title before , is the same\n",
         "books_df_g = books_df_g.groupby(books_df_g.title.str.split(pat = ' Volume| Vol\\.| vol\\.| #').str[0])\n",
         "print(books_df['book_id'].nunique())\n",
         "print(books_df_g.ngroups)\n",
@@ -359,7 +361,7 @@
         },
         "outputId": "6e2199a1-5333-4b1d-fd76-13464fa09bf9"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +421,7 @@
         },
         "outputId": "b7b425f4-e6a8-477a-87b9-769e5632103d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -534,6 +536,7 @@
         "  author_id_to_name[row['author_id']] = row['name']\n",
         "display(books_df.head(5))\n",
         "#important: type of author is np.int64\n",
+        "#replace authors by list of authors and give groups an id\n",
         "books_df_g['author_name'] = books_df_g['authors'].apply(lambda authors_dct_lst: author_id_to_name.get(np.int64(authors_dct_lst[0]['author_id'])))\n",
         "books_df_g[\"group_id\"]=range(0,len(books_df_g))\n",
         "books_df['author_name'] = books_df['authors'].apply(lambda authors_dct_lst: author_id_to_name.get(np.int64(authors_dct_lst[0]['author_id'])))\n",
@@ -551,7 +554,7 @@
         },
         "outputId": "94662717-6445-4aed-e932-a82c09a703cf"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -801,7 +804,7 @@
         },
         "outputId": "8136a1da-9292-4d47-bcfe-7000c73ae56d"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1066,7 @@
         },
         "outputId": "e0a42909-1f7c-4748-fbd0-867451595eb9"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1123,18 +1126,20 @@
         "display(interactions_df_processed.head(5))\n",
         "print(f\"number of unique users: {interactions_df_processed['user_id'].nunique()}\")\n",
         "print(f\"number of unique items: {interactions_df_processed['item_id'].nunique()}\")\n",
+        "#make users consecutive dictionary\n",
         "user_dic={}\n",
         "counter=0\n",
         "for i in interactions_df_processed['user_id'].unique():\n",
         "  user_dic[i]=counter\n",
         "  counter+=1\n",
+        "#make items consecutive dictionary\n",
         "\n",
         "item_dic={}\n",
         "counter=0\n",
         "for i in interactions_df_processed['item_id'].unique():\n",
         "  item_dic[i]=counter\n",
         "  counter+=1\n",
-        "\n",
+        "#save all data \n",
         "if allData:\n",
         "  with open(path+\"datasets/AllDataUser_dic.pickle\", 'wb') as f:\n",
         "      pickle.dump(user_dic, f, pickle.HIGHEST_PROTOCOL)\n",
@@ -1156,7 +1161,7 @@
         },
         "outputId": "bb942b94-b91e-4e3c-c5b0-5f72255d8c4c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1341,22 +1346,26 @@
       "cell_type": "code",
       "source": [
         "import random\n",
+        "#create interaction list for each user\n",
         "sessions_df = interactions_df_processed.groupby(by='user_id', as_index=False)[['item_id','datetime']].agg(list)\n",
         "display(sessions_df.head(10))\n",
         "\n",
         "def split(items, percentage_train, seed):\n",
-        "\n",
+        "  #shuffle the interactions per user\n",
         "  shuffledItems = items\n",
         "  random.seed(seed)\n",
         "  random.shuffle(shuffledItems)\n",
         "  no_train_items = math.floor(len(shuffledItems) * percentage_train)\n",
         "  return shuffledItems[0:no_train_items], shuffledItems[no_train_items:]\n",
         "\n",
+        "#create test split with history as train and future as test\n",
+        "\n",
         "def trainTestSplit(df, percentage_train=0.8, seed=1):\n",
         "  \n",
         "  df['history'] = df['item_id'].apply(lambda items: split(items, percentage_train, seed)[0])\n",
         "  df['future'] = df['item_id'].apply(lambda items: split(items, percentage_train, seed)[1])\n",
         "  return df\n",
+        "#create and save folds\n",
         "for s in range(1,6):\n",
         "  randomSplit_df = trainTestSplit(sessions_df, percentage_train=0.8, seed=s)\n",
         "  if allData:\n",
@@ -1372,7 +1381,7 @@
         },
         "outputId": "59b5defb-1e7e-448b-a3e4-68ce7d33905d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
