--- a/GroupPreparation.ipynb
+++ b/GroupPreparation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "GroupPreparation.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -30,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "93kBs82D6TLe"
       },
@@ -88,7 +89,7 @@
         "id": "DDfqmDO67mdx",
         "outputId": "e1070de7-dfcf-45ef-b35e-9863bf4d6127"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,7 +127,7 @@
       "metadata": {
         "id": "l8HeMkMA7pKQ"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -144,8 +145,10 @@
       "cell_type": "code",
       "source": [
         "books_df_g=pd.read_csv(books_df_g_path)  \n",
+        "#turn string into list\n",
         "books_df_g['book_id'] = books_df_g.book_id.apply(lambda x: x[1:-1].split(','))\n",
         "print(books_df_g.head())\n",
+        "#make a groupdict where an item_id is matched to its corresponding groupid\n",
         "groupdic=dict()\n",
         "counter=0\n",
         "books_df_g[\"group_id\"]=range(0,len(books_df_g))\n",
@@ -158,6 +161,7 @@
         "  counter+=1\n",
         "print(groupdic)\n",
         "\n",
+        "#make reversegroupdic where a groupid gives back the list of all book_ids belonging to the group\n",
         "from collections import defaultdict\n",
         "reverseGroupdic=defaultdict(list)\n",
         "for key, value in groupdic.items():\n",
@@ -182,7 +186,7 @@
         "id": "PdIH0Cv9951o",
         "outputId": "a14f5682-7e9e-461e-9017-5034647f7111"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,7 +228,7 @@
         "print(f\"number of unique items: {interactions_df_processed['item_id'].nunique()}\")\n",
         "print()\n",
         "\n",
-        "\n",
+        "#transform bookids to groupids and make them consecutive\n",
         "interactions_df_processed[\"item_id\"]=interactions_df_processed[\"item_id\"].apply(lambda x: groupdic[x])\n",
         "cons_group_dic={}\n",
         "ctr=0\n",
@@ -248,7 +252,7 @@
         "id": "8YxQeJ2P7z8Y",
         "outputId": "283c2bcf-1c6d-4b02-ef4e-69147ae13d05"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -346,7 +350,7 @@
       "metadata": {
         "id": "brJYwx4RK3_k"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     }
   ]
