--- a/Evaulation.ipynb
+++ b/Evaulation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Evaulation.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -62,7 +63,7 @@
       "metadata": {
         "id": "gp2pMiRGQZBz"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -75,12 +76,12 @@
       "metadata": {
         "id": "vqRtR_OMQf-K"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "3AoId8QsOFzK"
       },
@@ -168,7 +169,8 @@
         "        spars.setdiag(self.newDiag)\n",
         "        self.B = spars.toarray()\n",
         "    def predict(self, X, firstUserID):\n",
-        "        \n",
+        "        #iterate over all users and extract top 10 items after multiplying interaction matrix with weight matrix B\n",
+        "\n",
         "        S = X*self.B\n",
         "        users = set(X.nonzero()[0])\n",
         "        \n",
@@ -176,13 +178,13 @@
         "      \n",
         "        U, I, V = [], [], []\n",
         "        real_groups=list(cons_group_dic.keys())\n",
-        "\n",
         "        for user in users:\n",
         "            history_of_user=sessions_df.loc[sessions_df['user_id']==user+firstUserID].history.item()\n",
         "            U.extend([user] * self.K)\n",
         "\n",
-        "            # a=np.array([S[user][i] if i not in history_of_user or (len(reverseGroupdic[i]) > 1 and len(re.split(' Volume| Vol\\.| vol\\.| #', books_df_g.loc[books_df_g['group_id'] == list(cons_group_dic.keys())[i]].title.item())) > 1) else -self.l*2 for i in range(len(S[user])) ])\n",
         "            a = []\n",
+        "            #\n",
+        "            # check history of user and penalize volumes according to time\n",
         "            for i in range(len(S[user])):\n",
         "              try:\n",
         "                lastViewedIndex = (len(history_of_user) - 1 - history_of_user[::-1].index(i))\n",
@@ -192,7 +194,7 @@
         "                a.append(S[user][i]*((lastViewedIndex/len(history_of_user))**2)) \n",
         "              else:\n",
         "                a.append(-self.l*2)\n",
-        "            # a = np.array([S[user][i]*history_of_user.count(i) if (len(reverseGroupdic[i]) > 1 and history_of_user.count(i)<len(reverseGroupdic[i])) else a[i] for i in range(len(a))])\n",
+        "            #extract top K items \n",
         "            items = np.array(a).argsort()[-self.K:][::-1]\n",
         "            I.extend(items)\n",
         "            V.extend(S[user][items])\n",
@@ -221,7 +223,7 @@
         "with open(userdic_path, 'rb') as f:\n",
         "    userdic= pickle.load(f)\n",
         "\n",
-        "\n",
+        "#set parameters\n",
         "sessions_df=0\n",
         "books_df_g=pd.read_csv(books_df_g_path)\n",
         "lambda_=1000\n",
@@ -229,7 +231,8 @@
         "# books_df_g[\"group_id\"]=range(0,len(books_df_g))\n",
         "\n",
         "\n",
-        "def recall_easer_hyperparameter_optimization(model,K):\n",
+        "def recall_easer_evaluation(model,K):\n",
+        "  #sessions_df is used in Ease.predict, so we set it in this function\n",
         "  global sessions_df\n",
         "\n",
         "  ease = model\n",
@@ -243,6 +246,7 @@
         "      sessions_df = pd.read_csv(folds_path+\"AllDatafold\"+str(s)+\".csv\")\n",
         "    else:\n",
         "      sessions_df = pd.read_csv(folds_path+\"TestDatafold\"+str(s)+\".csv\")\n",
+        "    #initialize sessions_df correctly by changing string to lists and applying the userdic to make users sequential and groupdics to make item_ids into sequential group_ids\n",
         "    sessions_df['user_id'] = sessions_df.user_id.apply(lambda x:int(userdic[int(x)]))\n",
         "\n",
         "    sessions_df['history'] = sessions_df.history.apply(lambda x:[int(cons_group_dic[groupdic[int(y)]]) if y else y for y in x[1:-1].split(',')])\n",
@@ -250,32 +254,38 @@
         "    shape = (sessions_df['user_id'].max() +1, len(cons_group_dic))\n",
         "\n",
         "    ease.newDiag = get_newDiag(sessions_df,shape)\n",
+        "    #create train and true matrix and fit the model\n",
         "    train_x = create_sparse_matrix(sessions_df, column='history', shape=shape)\n",
         "    y_true = create_sparse_matrix(sessions_df, column='future', shape=shape)    \n",
         "    ease.threshold = threshold\n",
         "    ease.l=lambda_\n",
         "    ease.fit(train_x)\n",
+        "    #initialize params for batch processing of users and reset the ndcgs and recalls to 0\n",
         "    interval=int(train_x.shape[0]/20)\n",
         "    true_ndcg5=0\n",
         "    true_recall5=0\n",
         "    true_ndcg10=0\n",
         "    true_recall10=0\n",
+        "    #y_pred total is the predictions stacked ontop of eachother\n",
         "    y_pred_total = scipy.sparse.csr_matrix((0,train_x.shape[1])).astype(np.float32)\n",
-        "    \n",
+        "    # iterate over 20 batches to calculate ndcg and recall\n",
         "    for j in range(20-1):\n",
+        "      #create predict and truth batch and make recommendations\n",
         "      predict_split=train_x[np.ix_(list(range(interval*j,interval*(j+1))),list(range(train_x.shape[1])))]\n",
         "      true_split=y_true[np.ix_(list(range(interval*j,interval*(j+1))),list(range(train_x.shape[1])))]\n",
         "      y_pred = ease.predict(predict_split, interval*j)\n",
         "      y_pred_total = vstack((y_pred_total, y_pred))\n",
+        "      #calculate recall@K=10\n",
         "      scores = scipy.sparse.lil_matrix(y_pred.shape)\n",
         "      scores[y_pred.multiply(true_split).astype(bool)] = 1\n",
         "      scores = scores.tocsr()\n",
         "      scores = sparse_divide_nonzero(scores, scipy.sparse.csr_matrix(true_split.sum(axis=1))).sum(axis=1)\n",
         "      true_recall10+=scores.mean()*(interval/train_x.shape[0])\n",
-        "\n",
+        "      #calculate recall@K=5 (couldn't find a better way)\n",
         "      y_predD=y_pred.toarray()\n",
         "      rows=np.asarray((-y_predD).argsort()[:,:5])\n",
         "      y_pred5 = scipy.sparse.lil_matrix(y_pred.shape)\n",
+        "      #create top5 predictions from top10 predictions\n",
         "      for row in range(len(rows)):\n",
         "        for ind in rows[row]:\n",
         "          y_pred5[row,ind]=y_pred[row,ind]\n",
@@ -285,12 +295,13 @@
         "      scores5 = scores5.tocsr()\n",
         "      scores5 = sparse_divide_nonzero(scores5, scipy.sparse.csr_matrix(true_split.sum(axis=1))).sum(axis=1)\n",
         "      true_recall5+=scores5.mean()*(interval/train_x.shape[0])\n",
+        "      #calculate ndcg@5 and 10\n",
         "\n",
         "      ndcg10 = sklearn.metrics.ndcg_score(true_split.toarray(), y_pred.toarray(), k=10)\n",
         "      true_ndcg10+=ndcg10*(interval/train_x.shape[0])\n",
         "      ndcg5 = sklearn.metrics.ndcg_score(true_split.toarray(), y_pred.toarray(), k=5)\n",
         "      true_ndcg5+=ndcg5*(interval/train_x.shape[0])\n",
-        "\n",
+        "    #do the 20th and last predict and calculate recall and ndcg\n",
         "    predict_split=train_x[np.ix_(list(range(interval*19,train_x.shape[0])),list(range(train_x.shape[1])))]\n",
         "    true_split=y_true[np.ix_(list(range(interval*19,train_x.shape[0])),list(range(train_x.shape[1])))]\n",
         "    y_pred = ease.predict(predict_split, interval*19)\n",
@@ -318,7 +329,7 @@
         "    true_ndcg10+=ndcg10*(interval/train_x.shape[0])\n",
         "    ndcg5 = sklearn.metrics.ndcg_score(true_split.toarray(), y_pred.toarray(), k=5)\n",
         "    true_ndcg5+=ndcg5*(interval/train_x.shape[0])\n",
-        "\n",
+        "    #write intermediate result to file and append the metrics to theire list\n",
         "    f = open(path+\"Evaluation.txt\", \"a\")\n",
         "    f.write(\"recall @ {}: {:.4f}, ndcg: {:.4f} params lambda:{}, threshold={}, split={} \\n \".format(10,true_recall10,true_ndcg10 ,lambda_, threshold, s))\n",
         "    f.write(\"recall @ {}: {:.4f}, ndcg: {:.4f} params lambda:{}, threshold={}, split={} \\n\".format(5,true_recall5,true_ndcg5 ,lambda_, threshold, s))\n",
@@ -330,7 +341,7 @@
         "    ndcgs10.append(true_ndcg10)\n",
         "    recalls5.append(true_recall5)\n",
         "    ndcgs5.append(true_ndcg5)\n",
-        "  \n",
+        "  #calculate mean and stdev for recalls and ndcg\n",
         "  meanRecall5 = statistics.mean(recalls5)\n",
         "  stdevRecall5 = statistics.stdev(recalls5)\n",
         "\n",
@@ -361,7 +372,7 @@
       "metadata": {
         "id": "vhh18MLzPqyD"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,6 +399,7 @@
         "\n",
         "\n",
         "def get_newDiag(df,shape):\n",
+        "  #calculate the diagonal for the easer algorithm, currently sets non groups to 0 and groups to 1\n",
         "  self_similarity_n={}\n",
         "  self_similarity={}\n",
         "  for idx,row in df.iterrows():\n",
@@ -414,7 +426,7 @@
       "metadata": {
         "id": "DUuQtmxtTmjB"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -428,12 +440,11 @@
         "    inv_a.data = 1 / inv_a.data\n",
         "    return inv_a\n",
         "\n",
-        "\n",
+        "#call function for calculating quant metrics\n",
         "K = 10\n",
-        "for K in [10]:\n",
-        "  \n",
-        "  ease = Ease(K=K)\n",
-        "  y_pred =recall_easer_hyperparameter_optimization(ease,K)"
+        "\n",
+        "ease = Ease(K=K)\n",
+        "y_pred =recall_easer_evaluation(ease,K)"
       ],
       "metadata": {
         "colab": {
@@ -442,7 +453,7 @@
         "id": "fBAOL_giPlNj",
         "outputId": "bc008d79-f78b-4761-d60b-c2aeb5e81164"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -701,7 +712,7 @@
       "source": [
         "a=y_pred.getrow(0).toarray()\n",
         "from scipy.sparse import find\n",
-        "\n",
+        "#count how often items get recommended\n",
         "recommendations={}\n",
         "counter=0\n",
         "# iterate over all items and check how many times each id gets recommended\n",
@@ -719,7 +730,7 @@
       "metadata": {
         "id": "S24eVKJphNQs"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -734,7 +745,7 @@
         "id": "eKhomoEAfJtl",
         "outputId": "682636b6-72a8-401e-e781-86e94b7bd90a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -748,6 +759,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#plot log of recommendation per item\n",
         "x=list(reversed(sorted(recommendations.items(), key=lambda x: x[1])))\n",
         "import math\n",
         "y=[math.log(e[1]) for e in x]\n",
@@ -766,7 +778,7 @@
         },
         "outputId": "fbf960ed-039f-421b-9aac-ceb376d6a96f"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -842,7 +854,7 @@
         },
         "outputId": "34b6b525-2eb1-4ade-f1a3-4b185cb7cb2f"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
