--- a/Hyperparameters.ipynb
+++ b/Hyperparameters.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Copy of Hyperparameters.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -52,7 +53,7 @@
       "metadata": {
         "id": "gp2pMiRGQZBz"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -65,7 +66,7 @@
       "metadata": {
         "id": "vqRtR_OMQf-K"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -83,7 +84,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "3AoId8QsOFzK"
       },
@@ -169,6 +170,7 @@
         "        spars.setdiag(self.newDiag)\n",
         "        self.B = spars.toarray()\n",
         "    def predict(self, X, firstUserID):\n",
+        "        #iterate over all users and extract top ten items after multiplying interaction matrix with weight matrix B\n",
         "        \n",
         "        S = X*self.B\n",
         "        users = set(X.nonzero()[0])\n",
@@ -181,8 +183,7 @@
         "            history_of_user=randomSplit_df.loc[randomSplit_df['user_id']==user+firstUserID].history.item()\n",
         "            U.extend([user] * self.K)\n",
         "            \n",
-        "\n",
-        "            # a=np.array([S[user][i] if i not in history_of_user or (len(reverseGroupdic[i]) > 1 and len(re.split(' Volume| Vol\\.| vol\\.| #', books_df_g.loc[books_df_g['group_id'] == list(cons_group_dic.keys())[i]].title.item())) > 1) else -self.l*2 for i in range(len(S[user])) ])\n",
+        "            #check history of user and penalize volumes according to time\n",
         "            a = []\n",
         "            for i in range(len(S[user])):\n",
         "             \n",
@@ -194,7 +195,6 @@
         "                a.append(S[user][i]*((lastViewedIndex/len(history_of_user))**2)) \n",
         "              else:\n",
         "                a.append(-self.l*2)\n",
-        "            # a = np.array([S[user][i]*history_of_user.count(i) if (len(reverseGroupdic[i]) > 1 and history_of_user.count(i)<len(reverseGroupdic[i])) else a[i] for i in range(len(a))])\n",
         "            items = np.array(a).argsort()[-self.K:][::-1]\n",
         "            I.extend(items)\n",
         "            V.extend(S[user][items])\n",
@@ -222,6 +222,7 @@
         "import statistics\n",
         "import pickle\n",
         "import pandas as pd\n",
+        "# load dictionaries and books_df_grouped data\n",
         "with open(consgroup_path, 'rb') as f:\n",
         "    cons_group_dic= pickle.load(f)\n",
         "with open(groupdict_path, 'rb') as f:\n",
@@ -230,11 +231,13 @@
         "    reverseGroupdic= pickle.load(f)\n",
         "with open(userdic_path, 'rb') as f:\n",
         "    userdic= pickle.load(f)\n",
+        "#initialize global randomsplit_df since we need it in our predict function and this should not change except when changing split\n",
         "randomSplit_df=0\n",
         "books_df_g=pd.read_csv(books_df_g_path)\n",
         "books_df_g[\"group_id\"]=range(0,len(books_df_g))\n",
         "\n",
         "def recall_easer_hyperparameter_optimization(model,K):\n",
+        "  #initialize lists for recall ndcgs and hyperparameters\n",
         "  global randomSplit_df\n",
         "\n",
         "  ease = model\n",
@@ -242,17 +245,19 @@
         "  ndcgs = []\n",
         "  y_pred_totals = []\n",
         "  hyperParams=[]\n",
+        "  #read folds and set them as randomsplit_df\n",
         "  for s in range(1,6):\n",
         "    if allData:\n",
         "      randomSplit_df = pd.read_csv(folds_path+\"AllDatafold\"+str(s)+\".csv\")\n",
         "    else:\n",
         "      randomSplit_df = pd.read_csv(folds_path+\"TestDatafold\"+str(s)+\".csv\")\n",
+        "    # initialize df correctly (users and group ids sequential)\n",
         "    randomSplit_df['user_id'] = randomSplit_df.user_id.apply(lambda x:int(userdic[int(x)]))\n",
-        "\n",
+        "    #when reading files from csv the list is a string, so we transform it into a list of ints with consecutive group ids instead of book_id's\n",
         "    randomSplit_df['history'] = randomSplit_df.history.apply(lambda x:[int(cons_group_dic[groupdic[int(y)]]) if y else y for y in x[1:-1].split(',')])\n",
         "    randomSplit_df['future'] = randomSplit_df.future.apply(lambda x:[int(cons_group_dic[groupdic[int(y)]]) if y else y for y in x[1:-1].split(',')])\n",
         "    shape = (randomSplit_df['user_id'].max() +1, len(cons_group_dic))\n",
-        "\n",
+        "    #create train and ture matrix\n",
         "    ease.newDiag = get_newDiag(randomSplit_df,shape)\n",
         "    train_x = create_sparse_matrix(randomSplit_df, column='history', shape=shape)\n",
         "    y_true = create_sparse_matrix(randomSplit_df, column='future', shape=shape)\n",
@@ -261,18 +266,20 @@
         "    recalls_fold = []\n",
         "    ndcgs_fold=[]\n",
         "    hyperParams_fold=[]\n",
+        "    # grid search over lambdas and threhsolds\n",
         "    for lambda_ in [250,5000,50000]:\n",
         "      for threshold in [0.8,0.9]:\n",
         "        ease.threshold = threshold\n",
         "        ease.l=lambda_\n",
         "        ease.fit(train_x)\n",
-        "\n",
+        "        #create batch for predicts\n",
         "        interval=int(train_x.shape[0]/20)\n",
         "        true_ndcg=0\n",
         "        true_recall=0\n",
         "        y_pred_total = scipy.sparse.csr_matrix((0,train_x.shape[1])).astype(np.float32)\n",
         "        \n",
         "        for j in range(20-1):\n",
+        "          #create batch predict and truth, while calculating ndcg and recall@k\n",
         "          predict_split=train_x[np.ix_(list(range(interval*j,interval*(j+1))),list(range(train_x.shape[1])))]\n",
         "          true_split=y_true[np.ix_(list(range(interval*j,interval*(j+1))),list(range(train_x.shape[1])))]\n",
         "          y_pred = ease.predict(predict_split, interval*j)\n",
@@ -285,7 +292,7 @@
         "      \n",
         "          ndcg = sklearn.metrics.ndcg_score(true_split.toarray(), y_pred.toarray(), k=K)\n",
         "          true_ndcg+=ndcg*(interval/train_x.shape[0])\n",
-        "\n",
+        "        #final batch of ndcg and recall@K\n",
         "        predict_split=train_x[np.ix_(list(range(interval*19,train_x.shape[0])),list(range(train_x.shape[1])))]\n",
         "        true_split=y_true[np.ix_(list(range(interval*19,train_x.shape[0])),list(range(train_x.shape[1])))]\n",
         "        y_pred = ease.predict(predict_split, interval*19)\n",
@@ -305,12 +312,13 @@
         "        ndcgs_fold.append(true_ndcg)\n",
         "        recalls_fold.append(true_recall)\n",
         "        hyperParams_fold.append((lambda_, threshold))\n",
+        "    #find best parameters according to recall\n",
         "    max_value = max(recalls_fold)\n",
         "    max_index = recalls_fold.index(max_value)\n",
         "    recalls.append(recalls_fold[max_index])\n",
         "    ndcgs.append(ndcgs_fold[max_index])\n",
         "    hyperParams.append(hyperParams_fold[max_index])\n",
-        "  \n",
+        "  #calculate mean and stdevs\n",
         "  meanRecall = statistics.mean(recalls)\n",
         "  stdevRecall = statistics.stdev(recalls)\n",
         "\n",
@@ -325,7 +333,7 @@
       "metadata": {
         "id": "vhh18MLzPqyD"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -351,6 +359,7 @@
         "\n",
         "\n",
         "def get_newDiag(df,shape):\n",
+        "  #calculate diagonal for easer\n",
         "  self_similarity_n={}\n",
         "  self_similarity={}\n",
         "  for idx,row in df.iterrows():\n",
@@ -377,7 +386,7 @@
       "metadata": {
         "id": "DUuQtmxtTmjB"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,10 +402,9 @@
         "\n",
         "\n",
         "K = 10\n",
-        "for K in [10]:\n",
         "  \n",
-        "  ease = Ease(K=K)\n",
-        "  ndcg,recall, y_pred =recall_easer_hyperparameter_optimization(ease,K)"
+        "ease = Ease(K=K)\n",
+        "ndcg,recall, y_pred =recall_easer_hyperparameter_optimization(ease,K)"
       ],
       "metadata": {
         "colab": {
@@ -405,7 +413,7 @@
         "id": "fBAOL_giPlNj",
         "outputId": "ed64eb8b-c0de-4900-e84d-84c7fdd0e84d"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,7 +464,7 @@
       "metadata": {
         "id": "S24eVKJphNQs"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     }
   ]
