--- a/session_based_evaluation.ipynb
+++ b/session_based_evaluation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "session_based_evaluation.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -32,7 +33,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "5E_wXiNF1mi5"
       },
@@ -75,12 +76,13 @@
       "metadata": {
         "id": "141ze-xF2OME"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "#Embarrassingly Shallow Autoencoder\n",
         "from scipy.sparse import find\n",
         "import itertools\n",
@@ -162,7 +164,8 @@
         "        spars.setdiag(self.newDiag)\n",
         "        self.B = spars.toarray()\n",
         "    def predict(self, X, firstUserID):\n",
-        "        \n",
+        "        #iterate over all users and extract top 10 items after multiplying interaction matrix with weight matrix B\n",
+        "\n",
         "        S = X*self.B\n",
         "        users = set(X.nonzero()[0])\n",
         "        \n",
@@ -170,13 +173,13 @@
         "      \n",
         "        U, I, V = [], [], []\n",
         "        real_groups=list(cons_group_dic.keys())\n",
-        "\n",
         "        for user in users:\n",
         "            history_of_user=sessions_df.loc[sessions_df['user_id']==user+firstUserID].history.item()\n",
         "            U.extend([user] * self.K)\n",
         "\n",
-        "            # a=np.array([S[user][i] if i not in history_of_user or (len(reverseGroupdic[i]) > 1 and len(re.split(' Volume| Vol\\.| vol\\.| #', books_df_g.loc[books_df_g['group_id'] == list(cons_group_dic.keys())[i]].title.item())) > 1) else -self.l*2 for i in range(len(S[user])) ])\n",
         "            a = []\n",
+        "            #\n",
+        "            # check history of user and penalize volumes according to time\n",
         "            for i in range(len(S[user])):\n",
         "              try:\n",
         "                lastViewedIndex = (len(history_of_user) - 1 - history_of_user[::-1].index(i))\n",
@@ -186,19 +189,20 @@
         "                a.append(S[user][i]*((lastViewedIndex/len(history_of_user))**2)) \n",
         "              else:\n",
         "                a.append(-self.l*2)\n",
-        "            # a = np.array([S[user][i]*history_of_user.count(i) if (len(reverseGroupdic[i]) > 1 and history_of_user.count(i)<len(reverseGroupdic[i])) else a[i] for i in range(len(a))])\n",
+        "            #extract top K items \n",
         "            items = np.array(a).argsort()[-self.K:][::-1]\n",
         "            I.extend(items)\n",
         "            V.extend(S[user][items])\n",
         "\n",
         "        score_matrix = scipy.sparse.csr_matrix((V, (U, I)), shape=X.shape).astype(np.float32)\n",
         "        print(\"predict klaar\")\n",
-        "        return score_matrix"
+        "        return score_matrix\n",
+        "\n"
       ],
       "metadata": {
         "id": "kTOQpDeL2Q7n"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -224,19 +228,18 @@
         "  df['history'] = df['item_id'].apply(lambda items: splitSessionBased(items, percentage_train)[0])\n",
         "  df['future'] = df['item_id'].apply(lambda items: splitSessionBased(items, percentage_train)[1])\n",
         "  return df\n",
-        "\n",
+        "#create sessions_df\n",
         "if allData:\n",
         "  interactions_df_processed = pd.read_csv(path+\"datasets/AllDataPreprocessed_interactions.csv\")\n",
         "else:\n",
         "  interactions_df_processed = pd.read_csv(path+\"datasets/TestDataPreprocessed_interactions.csv\")\n",
-        "\n",
         "sessions_df_ = interactions_df_processed.groupby(by='user_id', as_index=False)[['item_id','datetime']].agg(list)\n",
         "sessions_df = trainTestSplitSessionBased(sessions_df_, percentage_train=0.8)"
       ],
       "metadata": {
         "id": "C7MOBUjo4axA"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -258,7 +261,7 @@
         "    userdic= pickle.load(f)\n",
         "\n",
         "\n",
-        "\n",
+        "#set parameters\n",
         "books_df_g=pd.read_csv(books_df_g_path)\n",
         "lambda_=1000\n",
         "threshold=0.9\n",
@@ -266,6 +269,8 @@
         "\n",
         "\n",
         "def recall_easer_session_based(model,K):\n",
+        "  #sessions_df is used in Ease.predict, so we set it in this function\n",
+        "\n",
         "  global sessions_df\n",
         "\n",
         "  ease = model\n",
@@ -273,6 +278,7 @@
         "  y_pred_total=None\n",
         "  \n",
         "  \n",
+        "  #initialize sessions_df correctly by changing string to lists and applying the userdic to make users sequential and groupdics to make item_ids into sequential group_ids\n",
         "\n",
         "  sessions_df['user_id'] = sessions_df.user_id.apply(lambda x:userdic[x])\n",
         "\n",
@@ -281,10 +287,12 @@
         "  shape = (sessions_df['user_id'].max() +1, len(cons_group_dic))\n",
         "\n",
         "  ease.newDiag = get_newDiag(sessions_df,shape)\n",
+        "  #create train ant test split\n",
         "  train_x = create_sparse_matrix(sessions_df, column='history', shape=shape)\n",
         "  y_true = create_sparse_matrix(sessions_df, column='future', shape=shape)    \n",
         "  ease.threshold = threshold\n",
         "  ease.l=lambda_\n",
+        "  #fit model on train\n",
         "  ease.fit(train_x)\n",
         "  interval=int(train_x.shape[0]/20)\n",
         "  true_ndcg5=0\n",
@@ -292,21 +300,27 @@
         "  true_ndcg10=0\n",
         "  true_recall10=0\n",
         "  y_pred_total = scipy.sparse.csr_matrix((0,train_x.shape[1])).astype(np.float32)\n",
-        "  \n",
+        "  # iterate over 20 batches to calculate ndcg and recall\n",
         "  for j in range(20-1):\n",
+        "    #create predict and truth batch and make recommendations\n",
+        "\n",
         "    predict_split=train_x[np.ix_(list(range(interval*j,interval*(j+1))),list(range(train_x.shape[1])))]\n",
         "    true_split=y_true[np.ix_(list(range(interval*j,interval*(j+1))),list(range(train_x.shape[1])))]\n",
         "    y_pred = ease.predict(predict_split, interval*j)\n",
         "    y_pred_total = vstack((y_pred_total, y_pred))\n",
+        "    #calculate recall@K=10\n",
+        "\n",
         "    scores = scipy.sparse.lil_matrix(y_pred.shape)\n",
         "    scores[y_pred.multiply(true_split).astype(bool)] = 1\n",
         "    scores = scores.tocsr()\n",
         "    scores = sparse_divide_nonzero(scores, scipy.sparse.csr_matrix(true_split.sum(axis=1))).sum(axis=1)\n",
         "    true_recall10+=scores.mean()*(interval/train_x.shape[0])\n",
+        "    #calculate recall@K=5 (couldn't find a better way)\n",
         "\n",
         "    y_predD=y_pred.toarray()\n",
         "    rows=np.asarray((-y_predD).argsort()[:,:5])\n",
         "    y_pred5 = scipy.sparse.lil_matrix(y_pred.shape)\n",
+        "    #create top5 predictions from top10 predictions\n",
         "    for row in range(len(rows)):\n",
         "      for ind in rows[row]:\n",
         "        y_pred5[row,ind]=y_pred[row,ind]\n",
@@ -316,11 +330,13 @@
         "    scores5 = scores5.tocsr()\n",
         "    scores5 = sparse_divide_nonzero(scores5, scipy.sparse.csr_matrix(true_split.sum(axis=1))).sum(axis=1)\n",
         "    true_recall5+=scores5.mean()*(interval/train_x.shape[0])\n",
+        "    #calculate ndcg@5 and 10\n",
         "\n",
         "    ndcg10 = sklearn.metrics.ndcg_score(true_split.toarray(), y_pred.toarray(), k=10)\n",
         "    true_ndcg10+=ndcg10*(interval/train_x.shape[0])\n",
         "    ndcg5 = sklearn.metrics.ndcg_score(true_split.toarray(), y_pred.toarray(), k=5)\n",
         "    true_ndcg5+=ndcg5*(interval/train_x.shape[0])\n",
+        "  #do the 20th and last predict and calculate recall and ndcg\n",
         "\n",
         "  predict_split=train_x[np.ix_(list(range(interval*19,train_x.shape[0])),list(range(train_x.shape[1])))]\n",
         "  true_split=y_true[np.ix_(list(range(interval*19,train_x.shape[0])),list(range(train_x.shape[1])))]\n",
@@ -349,7 +365,7 @@
         "  true_ndcg10+=ndcg10*(interval/train_x.shape[0])\n",
         "  ndcg5 = sklearn.metrics.ndcg_score(true_split.toarray(), y_pred.toarray(), k=5)\n",
         "  true_ndcg5+=ndcg5*(interval/train_x.shape[0])\n",
-        "\n",
+        "  \n",
         "  f = open(path+\"EvaluationSessionBased.txt\", \"a\")\n",
         "  f.write(\"recall @ {}: {:.4f}, ndcg: {:.4f} params lambda:{}, threshold={} \\n \".format(10,true_recall10,true_ndcg10 ,lambda_, threshold))\n",
         "  f.write(\"recall @ {}: {:.4f}, ndcg: {:.4f} params lambda:{}, threshold={}\\n\".format(5,true_recall5,true_ndcg5 ,lambda_, threshold))\n",
@@ -357,7 +373,7 @@
         "  print(\"recall @ {}: {:.4f}, ndcg: {:.4f} params lambda:{}, threshold={}\".format(10,true_recall10,true_ndcg10 ,lambda_, threshold))\n",
         "  print(\"recall @ {}: {:.4f}, ndcg: {:.4f} params lambda:{}, threshold={}\".format(5,true_recall5,true_ndcg5 ,lambda_, threshold))\n",
         "\n",
-        "\n",
+        "  #return only y_pred_total to use as predictions\n",
         "\n",
         "\n",
         "  return y_pred_total\n",
@@ -366,7 +382,7 @@
       "metadata": {
         "id": "AT5Kc8072VKi"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,6 +409,7 @@
         "\n",
         "\n",
         "def get_newDiag(df,shape):\n",
+        "  #calculate the diagonal for the easer algorithm, currently sets non groups to 0 and groups to 1\n",
         "  self_similarity_n={}\n",
         "  self_similarity={}\n",
         "  for idx,row in df.iterrows():\n",
@@ -419,7 +436,7 @@
       "metadata": {
         "id": "5jks3Tvd2ljn"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -435,10 +452,9 @@
         "\n",
         "\n",
         "K = 10\n",
-        "for K in [10]:\n",
         "  \n",
-        "  ease = Ease(K=K)\n",
-        "  y_pred =recall_easer_session_based(ease,K)"
+        "ease = Ease(K=K)\n",
+        "y_pred =recall_easer_session_based(ease,K)"
       ],
       "metadata": {
         "colab": {
@@ -447,7 +463,7 @@
         "id": "SM8Mf_7n2mhl",
         "outputId": "560d4eea-0514-4f1d-ea34-46ee2605fbd5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -526,7 +542,7 @@
       "source": [
         "a=y_pred.getrow(0).toarray()\n",
         "from scipy.sparse import find\n",
-        "\n",
+        "#count how often items get recommended\n",
         "recommendations={}\n",
         "counter=0\n",
         "# iterate over all items and check how many times each id gets recommended\n",
@@ -539,24 +555,25 @@
         "    else:\n",
         "      recommendations[i]=1\n",
         "    if i in listofuser:\n",
-        "      counter+=1"
+        "      counter+=1\n"
       ],
       "metadata": {
         "id": "L7JNpVyX2sEA"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#plot log of recommendation per item\n",
         "x=list(reversed(sorted(recommendations.items(), key=lambda x: x[1])))\n",
         "import math\n",
         "y=[math.log(e[1]) for e in x]\n",
         "names=[e[0] for e in x]\n",
         "import matplotlib.pyplot as plt\n",
         "plt.plot(y)\n",
-        "plt.ylabel('log(item rec.-count in top 100)')\n",
+        "plt.ylabel('log(item rec.-count in top 10)')\n",
         "plt.xlabel('item-ranks')\n",
         "plt.show()"
       ],
@@ -568,7 +585,7 @@
         "id": "7ixk-_hj2tZ2",
         "outputId": "27710685-43c7-4690-84a6-0d9a8be668ce"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -643,7 +660,7 @@
         "id": "uAprvaxY2xL_",
         "outputId": "d30b3fa1-ec8a-4204-d0b4-fda662e8b818"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
